--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,5 @@
 body {
+    
     min-height: 100vh;
 
     display: flex;
@@ -24,7 +25,7 @@ body {
 .menu__container {
     
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 
     gap: 8px;
@@ -48,12 +49,25 @@ body {
     font-weight: bold;
 }
 
-#content__container {
+.container__flex--row {
     display: flex;
     justify-content: space-evenly;
+    padding: 32px;
+    gap: 32px;
 }
 
+.image__container {
+    height: 300px;
+}
 
+.button__highlight {
+    font-weight: bold;
+    border-bottom: 2px solid var(--primary-color);
+}
+
+.hidden { 
+    display: none;
+}
 
 .footer__container {
     
