--- a/styles/main.css
+++ b/styles/main.css
@@ -57,7 +57,10 @@ body {
 }
 
 .image__container {
-    height: 300px;
+    height: 430px;
+    width: 430px;
+
+    object-fit: fill;
 }
 
 .button__highlight {
